<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gaampa</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="search">Search</string>
    <string name="import_">Import..</string>
    <string name="export_">Export..</string>
    <string name="about">About</string>
    <string name="medium_text">Medium Text</string>
    <string name="small_text">Small Text</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact1">contact1</string>
    <string name="button">Button</string>
    <string name="small">Small</string>
    <string name="description">description</string>
    <string name="ok">Ok</string>
    <string name="tag_">Tag:</string>
    <string name="description_">Description:</string>
    <string name="large_text">Large Text</string>
    <string name="searchresults">Search Results</string>
    <string name="add_a_new_contact">Add a New Contact</string>
    <string name="name">Name</string>
    <string name="edit_an_existing_contact">Edit an Existing Contact</string>

</resources>